# Paddle-on-Ethos-U

./: Image_Classification_Example.ipynb  OCR_Example.ipynb  Object_Detection_Example.ipynb  README.md  README_en.md  install.sh  paddle_verify.sh
cmake/os/: arm_baremetal.cmake  common.cmake
lite/: CMakeLists.txt
lite/api/: paddle_place.h
lite/backends/arm/: CMakeLists.txt  build_only.sh  run.sh  run_only.sh
lite/backends/arm/ethos-u-scratch/ethos-u/core_software/lib/: CMakeLists.txt
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/: .ignore  CMakeLists.txt  README.md
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/cmake/toolchain/: aarch64-linux-gnu-custom.cmake  aarch64-linux-gnu.cmake  aarch64-none-linux-gnu.cmake
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/docs/: driver_library_component.puml  driver_library_sequence.puml  kernel_network.puml
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/: CMakeLists.txt
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/include/: ethosu.hpp
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/: CMakeLists.txt  README.md  init_devenv.sh  pylintconfig  setup.py  swig_generate.py
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/src/ethosu_driver/: __init__.py  inference_runner.py
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/src/ethosu_driver/_generated/: __init__.py
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/src/ethosu_driver/_utilities/: __init__.py  driver_utilities.py
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/src/ethosu_driver/swig/: driver.i  standard_header.i
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/src/ethosu_driver/swig/typemaps/: buffer.i
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/test/: conftest.py  test_capabilities.py  test_driver.py  test_driver_utilities.py  test_inference.py  test_shadow_classes.py
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/python/test/testdata/: download.py
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/driver_library/src/: ethosu.cpp  ethosu_stub.cpp
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/kernel/: Kbuild
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/kernel/common/: ethosu_driver.c
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/mailbox/: Kbuild
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/remoteproc/: corstone1000_es_reset.c  ethosu_remoteproc.c  juno_fpga_reset.c
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/tests/: CMakeLists.txt  cancel_inference_test.cpp  run_inference_test.cpp  test_assertions.hpp
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/tools/linters/: uncrustify_kernel.cfg
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/utils/: CMakeLists.txt
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/utils/ethosu_logd/: main.cpp
lite/backends/arm/ethos-u-scratch/ethos-u/linux_driver_stack/utils/inference_runner/: inference_runner.cpp
lite/backends/arm/paddle_runner/: CMakeLists.txt  VelaBinStream.cpp  arm_paddle_runner.cpp  arm_perf_monitor.cpp  mobilenet_v1_opt.h  ocr_layout_preprocess.cpp  pico_postprocess.cpp  rec_postprocess.h
lite/core/: CMakeLists.txt  device_info.cc  scope.cc  scope.h  thread_pool.h
lite/kernels/arm/: CMakeLists.txt
lite/kernels/host/: CMakeLists.txt  conv_compute.cc  conv_compute.h  fc_compute.cc  fc_compute.h  pool_compute.cc  pool_compute.h  softmax_compute.cc  softmax_compute.h
lite/model_parser/flatbuffers/: op_desc.cc
lite/operators/: fill_constant_op.cc
lite/utils/: charconv.h  io.h
lite/utils/replace_stl/: stream.cc
model_zoo/BlazeFace_infer_int8/: BlazeFace_int8.nb  README.md  blazeface_postprocess.py  blazeface_preprocess_load.py  int2float.py
model_zoo/Human_pp_humansegv2_lite_avgmax_int8_opt/: README.md  human_pp_humansegv2_lite_avgmax_int8_opt.nb  humanseg_postprocess.py  humanseg_preprocess_load.py
model_zoo/MobileNetV1_infer_int8/: README.md  fc_fp32_bias.npy  fc_fp32_weights.npy  model.pdmodel  mv1_postprocess_load.py  mv1_preprocess_load.py  w_scale.txt
model_zoo/PPLCNetV2_infer_int8/: README.md  pplc_postprocess_load.py  pplc_preprocess_load.py
model_zoo/PP_TinyPose_128x96_qat_dis_nopact_opt/: ._Paddle-Lite  PP_TinyPose_128x96_qat_dis_nopact_opt.nb  README.md  tinypose_postprocess_load.py  tinypose_preprocess_load.py
model_zoo/PicoDetV2_infer_int8/: README.md  picodet_postprocess.py  picodet_preprocess_load.py  picodetv2_relu6_coco_no_fuse.nb
model_zoo/PpocrDet_infer_int8/: README.md  bias1.npy  bias2.npy  conv1.npy  conv2.npy  ppocr_det_postprocess.py  ppocr_det_preprocess_load.py
model_zoo/PpocrRec_infer_int8/: README.md  ppocr_rec_postprocess.py  ppocr_rec_preprocess_load.py
model_zoo/PpocrRec_infer_int8/post_process/: main.cpp  rec_postprocess.h  rec_postprocess.h.eigen
model_zoo/PpocrRec_infer_int8/weights/: b1.npy  b2.npy  linear1_b.npy  linear1_w.npy  linear2_b.npy  linear2_w.npy  r1.npy  r2.npy  w1.npy  w2.npy
model_zoo/Ppocr_layout_infer_int8/: README.md  input.npy  int2float.py  ppocr_layout_preprocess_load.py  preprocess.py
model_zoo/Ppocr_layout_infer_int8/layout_postprocess/: bias_1x37x100x76.npy  bias_1x37x13x10.npy  bias_1x37x25x19.npy  bias_1x37x50x38.npy  c2.npy  c3.npy  layout_postprocess.py  pdnpy2bin.py
readnb/: read_model.py  requirements.txt  test.py  write_model.py
readnb/inner_test/shape_test/: shape_compare.py
readnb/parser/: graph.py
readnb/parser/nb/: debug_utils.py  enums.py  nb_dag.py  (+5 more)
readnb/serialization_lib/: pyproject.toml
readnb/test_asset/: test_add.json
readnb/utils/: custom_op.py  utils.py
tools/verify/: paddle_verify_bin.sh  sub_graph_verify_auto.py
verify/: paddle_post_process.py  post_process.py  verify.py
(+179 files in other folders)
